--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am learning web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Sydney/Central Coast</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Golf, Travelling, Day Dreaming</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Retirement</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>South Sydney</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Work Remotely/Travel</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/gpopadalis">Github</a></li>
         </ul>
     </footer>
 </body>
